# mle-core-math

./: .appveyor.yml  .gitattributes  LICENSE  README.md
.github/workflows/: continuous-integration-msvc17.yml  makefile.yml
math/android/: TOCDoclet.bat  TOCDoclet.sh  config  options
math/android/com.wizzer.mle.math/: .classpath  .project  AndroidManifest.xml  javadoc.xml  mlmath.jardesc  mlmathdoc.jardesc
math/android/com.wizzer.mle.math/res/values/: strings.xml
math/android/com.wizzer.mle.math/src/: overview-summary.html
math/android/com.wizzer.mle.math/src/com/wizzer/mle/math/: MlAngle.java  MlMathTest.java  MlRotation.java  MlTransform.java  MlVector2.java  MlVector3.java  MlVector4.java
math/common/doc/: MleDoxyfile  MleDoxyfile.linux  mainpage.dox  wzFooter.html  wzHeader.html
math/common/include/math/: 3dmath.h  angle.h  anglebr.h  asine.h  atan.h  mlmath.h  recip.h  rotation.h  scalar.h  sine.h  sqrt.h  transfrm.h  trig.h  vector.h
math/common/src/: FixedMultiply.s  asine.cxx  atan.cxx  fixed.cxx  recip.cxx  rotation.cxx  scalar.cxx  sine.cxx  sqrt.cxx  testASM.cxx  testScalar.cxx  testScalarIllegal.awk  transfrm.cxx  vector.cxx
math/java/: TOCDoclet.sh  options  packages
math/java/com.wizzer.mle.math/: .project  build-user.xml  javadoc-linux.xml  javadoc.xml  mlmath-linux.jardesc  mlmath.jardesc  mlmathdoc-linux.jardesc  mlmathdoc.jardesc
math/java/com.wizzer.mle.math/src/com/wizzer/mle/math/: MlAngle.java  MlRotation.java  MlScalar.java  MlTransform.java  MlVector2.java  MlVector3.java  MlVector4.java  package.html
math/linux/: Makefile  ismdefs
math/linux/include/: Makefile
math/linux/libmlmath/: .autotools  .cproject  .project  CMakeLists.txt  Makefile.am  NEWS  README  configure.ac
math/linux/libmlmath/cmake/: FindMLUTIL.cmake
math/linux/libmlmath/exampleProgram/: Makefile.am  exampleProgram.c
math/linux/libmlmath/include/: Makefile.am  libmlmath.h
math/linux/libmlmath/libmlmath/: Makefile.am  libmlmath.c
math/linux/libmlmathtest/: .autotools  .cproject  .project  Makefile.am  NEWS  README  configure.ac
math/linux/libmlmathtest/exampleProgram/: Makefile.am  exampleProgram.cxx
math/linux/libmlmathtest/include/: Makefile.am  libmlmathtest.h
math/linux/libmlmathtest/libmlmathtest/: Makefile.am  libmlmathtest.cxx  testMlRotation.cxx  testMlTransform.cxx  testMlVector2.cxx  testMlVector3.cxx  testMlVector4.cxx
math/linux/src/: Makefile  leafdefs
math/linux/src/FixedDebug/: Makefile  localdefs
math/linux/src/FixedRelease/: Makefile  localdefs
math/linux/src/FloatDebug/: Makefile  localdefs
math/linux/src/FloatRelease/: Makefile
math/linux/src/ToolsFloatDebug/: Makefile
math/linux/src/ToolsFloatRelease/: Makefile  localdefs
math/mac/: ._mlmath.xcodeproj
math/mac/mlmath.xcodeproj/: ._project.xcworkspace  project.pbxproj
math/mac/mlmath.xcodeproj/project.xcworkspace/xcuserdata/sagemcom.xcuserdatad/: UserInterfaceState.xcuserstate
math/mac/mlmath.xcodeproj/xcuserdata/sagemcom.xcuserdatad/xcschemes/: xcschememanagement.plist
math/mac/mlmath/mlmath/: ._mlmath.xcodeproj
math/mac/mlmath/mlmath/mlmath.xcodeproj/: project.pbxproj
math/mac/mlmath/mlmath/mlmath.xcodeproj/project.xcworkspace/xcuserdata/sagemcom.xcuserdatad/: UserInterfaceState.xcuserstate
math/qt/mlmath/: mlmath.pro
math/win32/: Makefile  ismdefs
math/win32/include/: Makefile
math/win32/src/: Makefile  leafdefs
math/win32/src/FixedDebug/: Makefile  localdefs
math/win32/src/FixedRelease/: Makefile  localdefs
math/win32/src/FloatDebug/: Makefile  localdefs
math/win32/src/FloatRelease/: Makefile  localdefs
math/win32/src/ToolsFloatDebug/: Makefile  localdefs
math/win32/src/ToolsFloatRelease/: Makefile  localdefs
math/win32/src/mlmath_DLL/: Makefile  ReadMe.txt  StdAfx.cpp  StdAfx.h  mlmath.cpp
math/win32/src/mlmath_DLL/Debug/: Makefile  localdefs
math/win32/src/mlmath_DLL/Release/: Makefile  localdefs
