# These files will end up in the install include directory
# For example, /usr/include
includedir = $(prefix)/include/math

include_HEADERS = \
	$(top_srcdir)/../../common/include/math/3dmath.h \
	$(top_srcdir)/../../common/include/math/angle.h \
	$(top_srcdir)/../../common/include/math/asine.h \
	$(top_srcdir)/../../common/include/math/atan.h \
	$(top_srcdir)/../../common/include/math/mlmath.h \
	$(top_srcdir)/../../common/include/math/recip.h \
	$(top_srcdir)/../../common/include/math/rotation.h \
	$(top_srcdir)/../../common/include/math/scalar.h \
	$(top_srcdir)/../../common/include/math/sine.h \
	$(top_srcdir)/../../common/include/math/sqrt.h \
	$(top_srcdir)/../../common/include/math/transfrm.h \
	$(top_srcdir)/../../common/include/math/trig.h \
	$(top_srcdir)/../../common/include/math/vector.h
